# bevy-ants

./: Cargo.toml  README.md
assets/documentation/shaders/: edge_falloff_shader.ggb
assets/shaders/: custom_material.wgsl
src/: ant.rs  camera.rs  coords.rs  events.rs  main.rs  nest.rs  pheremone.rs  velocity.rs
src/helpers/: camera.rs  colliders.rs  coords.rs  events.rs  mod.rs
src/helpers/kinetic/: limits.rs  mod.rs
src/helpers/sampling/: arc.rs  circle.rs  images.rs  mod.rs
src/kinetic/: limits.rs  mod.rs
src/simulation/: ant.rs  food.rs  mod.rs  nest.rs
src/simulation/pheremone/: README.md  canvas.rs  material.rs  mod.rs  trail.rs
