[package]
name = "bevy-ants"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_prng = { version = "0.1.0", features = ["rand_chacha"] }
bevy_turborand = "0.6.0"
derive_more = "0.99.17"
rand = "0.8.5"
