[package]
name = "bevy-ants"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_rapier2d = "0.22.0"
bevy_turborand = "0.6"
derive_more = "0.99"
rand = "0.8"
