[package]
name = "bevy-ants"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier2d = "0.23"
bevy_turborand = "0.7"
rand = "0.8"
bevycheck = "0.5.2"
derivative = "2.2.0"
derive_more = "0.99.17"

[dev-dependencies]
